testsuite/tests/properties/invalid_super/common.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- or(Example("example") | Number(@number))
}
